[metadata]
name = vedirect
version = 3.0.0
author = Manu Lange
author_email = manulange_3@hotmail.com
description = VE.Direct interface for Victron devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nznobody/vedirect
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    vedirect = vedirect.vedirect:main
    vedirect_device_emulator = vedirect.vedirect_device_emulator:main

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyserial

[options.packages.find]
where = src

[options.extras_require]
extras = 
    tox
    pytest
    pytest-asyncio
    async-timeout
    dummyserial @https://github.com/nznobody/dummyserial/archive/master.zip
